# vision-tactile-sensor

./: .gitignore  README.md  main.py  pyproject.toml
docs/: handover_notes.md
modules/: pipeline.py  processor.py
modules/normal_force/: normal_force_estimation.py
modules/shear/: REFERENCE.md  shear_estimator.py  shear_processor.py  shear_visualizer.py
modules/torque/: angular_profile_demo.py  fft_magnitude_demo.py  make_dot_video.py  moire_from_video.py  moire_pattern_estimation.py  torque_processor.py
