[project]
name = "vision-tactile-sensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gsw>=3.6.19",
    "joblib>=1.5.1",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
